fix: complete protocol isolation
Complete protocol isolation: eliminate all protocol model imports from domain/transport, introduce a ProtocolResponseMapper interface for handler response creation, and store negotiated protocol version on InteractionContext.

Constraints & Preferences

- Protocol classes (dev.tachyonmcp.protocol.mcp.v2025_11_25.models, .codecs) must not leak into domain (dev.tachyonmcp.server.*, dev.tachyonmcp.transport.*)
- Handlers operate via ProtocolResponseMapper interface, not via direct protocol model construction
- Protocol name + version lives on InteractionContext after Netty initialization negotiation
- No Jackson ObjectMapper — hand-rolled ValueSerializer with JsonGenerator API only